<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">bloom</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_150_00">150.00\u20ba</string>
  <string name="lbl_02_00m_ride">02:00m ride</string>
  <string name="lbl_0_50_dk">0.50\u20ba dk</string>
  <string name="lbl_m">M</string>
  <string name="lbl_s">S</string>
  <string name="msg_10_00_dev_meeti">10:00 dev meeting</string>
  <string name="lbl_t">T</string>
  <string name="lbl_w">W</string>
  <string name="lbl_12_00">12:00</string>
  <string name="msg_finish_the_ride">finish the ride and make sure to park it in a designated spot!</string>
  <string name="lbl_connect_scooter">Connect scooter</string>
  <string name="lbl_battery_level">Battery Level</string>
  <string name="msg_good_luck_with">Good luck with your meeting!</string>
  <string name="msg_reservation_sta">Reservation
Started</string>
  <string name="lbl_log_out">Log Out</string>
  <string name="lbl_15_00">15:00 </string>
  <string name="lbl_notifications">Notifications</string>
  <string name="msg_1_00_0_50_d">1.00\u20ba / 0.50\u20ba dk</string>
  <string name="msg_show_work_scoot">Show work Scooters</string>
  <string name="lbl_dev_meeting"> dev meeting</string>
  <string name="msg_next_meeting_1">Next meeting: 10:00</string>
  <string name="lbl_show">Show </string>
  <string name="lbl_f">F</string>
  <string name="lbl_reservation">Reservation</string>
  <string name="lbl_750m">750m</string>
  <string name="lbl_schedule">Schedule:</string>
  <string name="lbl_july_2023">July 2023</string>
  <string name="msg_take_a_clear_ph">Take a clear photo of the scooter to finish the ride and make sure to park it in a designated spot!</string>
  <string name="lbl_10_00">10:00</string>
  <string name="msg_next_meeting_in">Next meeting in 15 minutes</string>
  <string name="lbl_today_18_10">Today 18:10</string>
  <string name="msg_scooter_distanc">Scooter Distance from your location</string>
  <string name="msg_12_00_scrum_wit">12:00 scrum with design team</string>
  <string name="lbl_30">30</string>
  <string name="lbl_31">31</string>
  <string name="lbl_ring_the_bell">Ring the Bell</string>
  <string name="lbl_35">35</string>
  <string name="msg_stop_reservatio">Stop Reservation · 1.50\u20ba</string>
  <string name="lbl_750_meters2">~750 meters</string>
  <string name="lbl_eren_y_lmaz">Eren Yılmaz</string>
  <string name="lbl_197">197</string>
  <string name="msg_scrum_with_desi"> scrum with design team</string>
  <string name="lbl_0m">0m</string>
  <string name="lbl_20">20</string>
  <string name="lbl_publish_product">publish product
</string>
  <string name="lbl_23">23</string>
  <string name="msg_start_driving_b">Start driving by scanning the qr code</string>
  <string name="lbl_24">24</string>
  <string name="lbl_21">21</string>
  <string name="lbl_22">22</string>
  <string name="lbl_27">27</string>
  <string name="lbl_28">28</string>
  <string name="lbl_25">25</string>
  <string name="msg_stop_reservatio2">Stop Reservation </string>
  <string name="lbl_26">26</string>
  <string name="lbl_riding_history">Riding History</string>
  <string name="lbl_100">100</string>
  <string name="lbl_29">29</string>
  <string name="lbl_you_re_on_time">You\u2019re on time!</string>
  <string name="lbl_finish">Finish</string>
  <string name="lbl_take_picture">Take Picture</string>
  <string name="lbl_work_schedule">Work schedule</string>
  <string name="lbl_750_meters_ride">750 meters ride</string>
  <string name="lbl_12">12</string>
  <string name="lbl_july_20232">July
2023</string>
  <string name="lbl_13">13</string>
  <string name="lbl_10">10</string>
  <string name="lbl_11">11</string>
  <string name="lbl_16">16</string>
  <string name="lbl_17">17</string>
  <string name="lbl_scan_now">Scan Now</string>
  <string name="lbl_14">14</string>
  <string name="lbl_15">15</string>
  <string name="lbl_18">18</string>
  <string name="lbl_19">19</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_scooters"> Scooters</string>
  <string name="msg_scooter_distanc2">Scooter Distance</string>
  <string name="msg_you_re_going_to">You\u2019re going to be on time!</string>
  <string name="lbl_1">1</string>
  <string name="lbl_2">2</string>
  <string name="lbl_3">3</string>
  <string name="lbl_4">4</string>
  <string name="lbl_5">5</string>
  <string name="lbl_john_doe">John Doe</string>
  <string name="lbl_6">6</string>
  <string name="lbl_7">7</string>
  <string name="lbl_8">8</string>
  <string name="lbl_9">9</string>
  <string name="msg_let_s_connect_y">Let\u2019s connect your work calendar</string>
  <string name="msg_take_a_clear_ph2">Take a clear photo of the scooter to </string>
  <string name="lbl_sur4y1l">SUR4Y1L</string>
  <string name="lbl_to_do">To Do: </string>
  <string name="lbl_75">%75</string>
  <string name="lbl_businesswheel">BusinessWheel</string>
  <string name="lbl_750_meters">750 meters</string>
  <string name="msg_finish_concept">Finish concept
  Launch product</string>
  <string name="lbl_saved_cards">Saved Cards</string>
  <string name="msg_show_197_scoote">Show 197 Scooters</string>
  <string name="lbl_ride_started">Ride
Started</string>
  <string name="msg_15_00_publish_p">15:00 publish product
</string>
  <string name="lbl_01_10dk">01:10dk</string>
  <string name="lbl_01_10m">01:10m</string>
</resources>
