<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listday01variRowModel" type="com.bloom.app.modules.calenderintegration.data.model.Listday01variRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearCalendarWeek"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtDay01Vari"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingStart="@dimen/_5pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{listday01variRowModel.txtDay01Vari}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_26"/>
        <TextView android:ellipsize="end" android:id="@+id/txtDay02Vari"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingStart="@dimen/_5pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{listday01variRowModel.txtDay02Vari}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_27"/>
        <TextView android:ellipsize="end" android:id="@+id/txtDay03Vari"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingStart="@dimen/_5pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{listday01variRowModel.txtDay03Vari}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_28"/>
        <TextView android:ellipsize="end" android:id="@+id/txtDay04Vari"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingStart="@dimen/_5pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{listday01variRowModel.txtDay04Vari}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_29"/>
        <TextView android:ellipsize="end" android:id="@+id/txtDay05Vari"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingStart="@dimen/_4pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{listday01variRowModel.txtDay05Vari}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_30"/>
        <TextView android:ellipsize="end" android:id="@+id/txtDay06Vari"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingStart="@dimen/_6pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{listday01variRowModel.txtDay06Vari}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_31"/>
        <TextView android:ellipsize="end" android:id="@+id/txtDay07Vari"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingEnd="@dimen/_10pxh"
            android:paddingStart="@dimen/_9pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{listday01variRowModel.txtDay07Vari}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_1"/>
    </LinearLayout>
</layout>
