<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="scanQrVM" type="com.bloom.app.modules.scanqr.data.viewmodel.ScanQrVM"/>
    </data>
    <LinearLayout android:id="@+id/linearScanQR"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900">
        <LinearLayout android:id="@+id/linearIPhoneSimgeler"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageTime"
                android:layout_height="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_29pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_time"
                tools:ignore="ContentDescription" tools:src="@drawable/img_time"/>
            <LinearLayout android:id="@+id/linearRowcellularconnec"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_236pxh"
                android:layout_weight="0.69" android:layout_width="0dp" android:orientation="horizontal">
                <ImageView android:id="@+id/imageCellularConnec"
                    android:layout_height="@dimen/_10pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_17pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_cellularconnec"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_cellularconnec"/>
                <ImageView android:id="@+id/imageWifi"
                    android:layout_height="@dimen/_10pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_wifi"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_wifi"/>
                <ImageView android:id="@+id/imageBattery"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_battery"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_battery"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView android:id="@+id/imageIconClose"
            android:layout_gravity="start"
            android:layout_height="@dimen/_19pxh"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="@dimen/_19pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_iconclose"
            tools:ignore="ContentDescription" tools:src="@drawable/img_iconclose"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtConnectscooter"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{scanQrVM.scanQrModel.txtConnectscooter}"
            style="@style/txtInterregular25" tools:text="@string/lbl_connect_scooter"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtStartdrivingb"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{scanQrVM.scanQrModel.txtStartdrivingb}"
            style="@style/txtInterregular15_1" tools:text="@string/msg_start_driving_b"/>
        <FrameLayout android:id="@+id/frameQRCode"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_322pxv"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_52pxv" android:layout_width="@dimen/_322pxh">
            <ImageView android:id="@+id/imageFrameEleven"
                android:layout_gravity="center"
                android:layout_height="@dimen/_275pxh"
                android:layout_marginHorizontal="@dimen/_23pxh"
                android:layout_marginVertical="@dimen/_23pxv"
                android:layout_width="@dimen/_275pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_frame11}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_frame11"/>
            <View
                android:background="@drawable/rectangle_border_gray_100_71"
                android:id="@+id/viewRectangle403"
                android:layout_gravity="center"
                android:layout_height="@dimen/_319pxh"
                android:layout_marginHorizontal="@dimen/_1pxh"
                android:layout_marginVertical="@dimen/_1pxv" android:layout_width="@dimen/_319pxh"/>
            <ImageView android:id="@+id/imageGroup5362"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_65pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_69pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_group5362"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group5362"/>
            <ImageView android:id="@+id/imageGroup5364"
                android:layout_gravity="top|end"
                android:layout_height="@dimen/_65pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_width="@dimen/_69pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_group5364"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group5364"/>
            <ImageView android:id="@+id/imageGroup5363"
                android:layout_gravity="bottom|start"
                android:layout_height="@dimen/_65pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_69pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_group5362"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group5362"/>
            <ImageView android:id="@+id/imageGroup5365"
                android:layout_gravity="bottom|end"
                android:layout_height="@dimen/_65pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_69pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_group5364"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group5364"/>
        </FrameLayout>
        <ImageButton
            android:background="@drawable/rectangle_bg_gray_901_border_light_blue_a700_radius_5"
            android:id="@+id/btnIconFlash" android:layout_gravity="end"
            android:layout_height="@dimen/_45pxh"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_90pxv"
            android:layout_width="@dimen/_45pxh"
            android:paddingHorizontal="@dimen/_12pxh"
            android:paddingVertical="@dimen/_12pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_iconflash" tools:ignore="ContentDescription"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnScanNow"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@string/lbl_scan_now"
            android:textAllCaps="false" style="@style/btnSolidRounded_3" tools:text="@string/lbl_scan_now"/>
    </LinearLayout>
</layout>
