<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="takePictureVM" type="com.bloom.app.modules.takepicture.data.viewmodel.TakePictureVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearTakePicture"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameBackground"
            android:layout_height="match_parent" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageImageOne"
                android:layout_gravity="start"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_image1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image1"/>
            <FrameLayout android:id="@+id/frameStacksubtract"
                android:layout_gravity="start"
                android:layout_height="match_parent" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageSubtract"
                    android:layout_gravity="start"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_subtract"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_subtract"/>
                <LinearLayout android:id="@+id/linearColumntime"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_17pxv"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <LinearLayout android:id="@+id/linearIPhoneSimgeler"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_1pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageTime"
                            android:layout_height="@dimen/_11pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="@dimen/_29pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_time"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_time"/>
                        <LinearLayout
                            android:id="@+id/linearRowcellularconnec"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_marginStart="@dimen/_236pxh"
                            android:layout_weight="0.69"
                            android:layout_width="0dp" android:orientation="horizontal">
                            <ImageView
                                android:id="@+id/imageCellularConnec"
                                android:layout_height="@dimen/_10pxh"
                                android:layout_marginBottom="@dimen/_1pxv"
                                android:layout_marginTop="@dimen/_1pxv"
                                android:layout_width="@dimen/_17pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_cellularconnec"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_cellularconnec"/>
                            <ImageView android:id="@+id/imageWifi"
                                android:layout_height="@dimen/_10pxh"
                                android:layout_marginBottom="@dimen/_1pxv"
                                android:layout_marginStart="@dimen/_5pxh"
                                android:layout_width="@dimen/_15pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_wifi"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_wifi"/>
                            <ImageView android:id="@+id/imageBattery"
                                android:layout_height="@dimen/_11pxh"
                                android:layout_marginStart="@dimen/_5pxh"
                                android:layout_width="@dimen/_24pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_battery"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_battery"/>
                        </LinearLayout>
                    </LinearLayout>
                    <ImageView android:id="@+id/imageIconClose"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_19pxh"
                        android:layout_marginEnd="@dimen/_18pxh"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginTop="@dimen/_33pxv"
                        android:layout_width="@dimen/_19pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_iconclose"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_iconclose"/>
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtGoodluckwith"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_30pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{takePictureVM.takePictureModel.txtGoodluckwith}"
                        style="@style/txtInterregular25" tools:text="@string/msg_good_luck_with"/>
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtTakeaclearph"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="match_parent"
                        android:text="@{takePictureVM.takePictureModel.txtTakeaclearph}"
                        style="@style/txtABeeZeeregular15" tools:text="@string/msg_take_a_clear_ph"/>
                    <FrameLayout
                        android:id="@+id/frameStackrectangle416"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_322pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_15pxv" android:layout_width="@dimen/_322pxh">
                        <View android:background="@color/black_900_71"
                            android:id="@+id/viewRectangle416"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_318pxh"
                            android:layout_marginBottom="@dimen/_3pxv"
                            android:layout_marginEnd="@dimen/_3pxh"
                            android:layout_marginStart="@dimen/_4pxh"
                            android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_315pxh"/>
                        <ImageView android:id="@+id/imagePhoto"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_322pxh"
                            android:layout_width="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_photo"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_photo"/>
                    </FrameLayout>
                    <ImageButton
                        android:background="@drawable/rectangle_bg_gray_901_border_light_blue_a700_radius_5"
                        android:id="@+id/btnIconFlash"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_45pxh"
                        android:layout_marginEnd="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_90pxv"
                        android:layout_width="@dimen/_45pxh"
                        android:paddingHorizontal="@dimen/_12pxh"
                        android:paddingVertical="@dimen/_12pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_iconflash" tools:ignore="ContentDescription"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnTakePicture"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_23pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_12pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_12pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_take_picture"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded_3" tools:text="@string/lbl_take_picture"/>
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
